polish css, still need to fix border not fit

--- a/styles.css
+++ b/styles.css
@@ -9,24 +9,22 @@ body{
     flex-direction: column;
     align-items: center;
 }
-#frame{
-    border: 1px ;
-    box-shadow: 0px 0px 10px 5px #7b7f87;
-    max-width: 960px;
-    margin : 2em;
-
-}
 
 #grid {
     display: flex;
     flex-wrap: wrap;
-    max-width: 36em;
+    border: 1px ;
+    box-shadow: 0px 0px 10px 5px #7b7f87;
+    width: 36em;
+    margin : 2em;
+
 }
 
 .pixels{
    padding: 1em;
-   border: 1px;
+   border: 1px solid;
    text-align: center;
+   background-color: #ffffff;
 
 }
 
